app/tailwind.css
/* ... */
.mt-px {
  margin-top: 1px;
}

.mt-4 {
  margin-top: 1rem;
}

.-mt-6 {
  margin-top: -1.5rem;
}

.ml-3 {
  margin-left: 0.75rem;
}

.mb-0 {
  margin-bottom: 0px;
}

.-mt-20 {
  margin-top: -5rem;
}

.mb-16 {
  margin-bottom: 4rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.mt-8 {
  margin-top: 2rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.-mt-4 {
  margin-top: -1rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mt-24 {
  margin-top: 6rem;
}

.mt-12 {
  margin-top: 3rem;
}

.-ml-1 {
  margin-left: -0.25rem;
}

.mr-2 {
  margin-right: 0.5rem;
}

.mb-8 {
  margin-bottom: 2rem;
}

.ml-auto {
  margin-left: auto;
}

.mb-20 {
  margin-bottom: 5rem;
}

.mb-12 {
  margin-bottom: 3rem;
}

.mt-16 {
  margin-top: 4rem;
}

.-mb-px {
  margin-bottom: -1px;
}

.mb-6 {
  margin-bottom: 1.5rem;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.inline-flex {
  display: inline-flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-6 {
  height: 1.5rem;
}

.h-3\.5 {
  height: 0.875rem;
}

.h-3 {
  height: 0.75rem;
}

.h-5 {
  height: 1.25rem;
}

.h-9 {
  height: 2.25rem;
}

.h-12 {
  height: 3rem;
}

.h-\[58px\] {
  height: 58px;
}

.h-\[74px\] {
  height: 74px;
}

.h-\[110px\] {
  height: 110px;
}

.h-screen {
  height: 100vh;
}

.h-8 {
  height: 2rem;
}

.h-10 {
  height: 2.5rem;
}

.h-full {
  height: 100%;
}

.h-1\.5 {
  height: 0.375rem;
}

.h-4 {
  height: 1rem;
}

.h-1 {
  height: 0.25rem;
}

.h-max {
  height: -moz-max-content;
  height: max-content;
}

.h-11 {
  height: 2.75rem;
}

.h-16 {
  height: 4rem;
}

.h-24 {
  height: 6rem;
}

.max-h-\[100vh\] {
  max-height: 100vh;
}

.max-h-\[32px\] {
  max-height: 32px;
}

.max-h-\[40px\] {
  max-height: 40px;
}

.max-h-\[48px\] {
  max-height: 48px;
}

.max-h-96 {
  max-height: 24rem;
}

.min-h-\[100vh\] {
  min-height: 100vh;
}

.min-h-\[100px\] {
  min-height: 100px;
}

.w-max {
  width: -moz-max-content;
  width: max-content;
}

.w-6 {
  width: 1.5rem;
}

.w-3\.5 {
  width: 0.875rem;
}

.w-3 {
  width: 0.75rem;
}

.w-5 {
  width: 1.25rem;
}

.w-full {
  width: 100%;
}

.w-9 {
  width: 2.25rem;
}

.w-12 {
  width: 3rem;
}

.w-\[58px\] {
  width: 58px;
}

.w-\[74px\] {
  width: 74px;
}

.w-\[110px\] {
  width: 110px;
}

.w-screen {
  width: 100vw;
}

.w-1\/4 {
  width: 25%;
}

.w-1\/3 {
  width: 33.333333%;
}

.w-2\/5 {
  width: 40%;
}

.w-3\/5 {
  width: 60%;
}

.w-3\/4 {
  width: 75%;
}

.w-8 {
  width: 2rem;
}

.w-10 {
  width: 2.5rem;
}

.w-auto {
  width: auto;
}

.w-16 {
  width: 4rem;
}

.w-5\/6 {
  width: 83.333333%;
}

.w-1\/2 {
  width: 50%;
}

.w-2\/3 {
  width: 66.666667%;
}

.min-w-\[25\%\] {
  min-width: 25%;
}

.min-w-\[33\.333333\%\] {
  min-width: 33.333333%;
}

.min-w-\[40\%\] {
  min-width: 40%;
}

.min-w-\[60\%\] {
  min-width: 60%;
}

.min-w-\[75\%\] {
  min-width: 75%;
}

.min-w-\[100vw\] {
  min-width: 100vw;
}

.min-w-\[200px\] {
  min-width: 200px;
}

.min-w-\[180px\] {
  min-width: 180px;
}

.min-w-0 {
  min-width: 0px;
}

.max-w-\[25\%\] {
  max-width: 25%;
}

.max-w-\[33\.333333\%\] {
  max-width: 33.333333%;
}

.max-w-\[40\%\] {
  max-width: 40%;
}

.max-w-\[60\%\] {
  max-width: 60%;
}

.max-w-\[75\%\] {
  max-width: 75%;
}

.max-w-\[100vw\] {
  max-width: 100vw;
}

.max-w-\[32px\] {
  max-width: 32px;
}

.max-w-\[40px\] {
  max-width: 40px;
}

.max-w-\[48px\] {
  max-width: 48px;
}

.max-w-screen-2xl {
  max-width: 1320px;
}

.max-w-full {
  max-width: 100%;
}

.flex-auto {
  flex: 1 1 auto;
}

.flex-shrink-0 {
  flex-shrink: 0;
}

.shrink-0 {
  flex-shrink: 0;
}

.grow {
  flex-grow: 1;
}

.basis-full {
  flex-basis: 100%;
}

.-translate-y-2\/4 {
  --tw-translate-y: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-x-2\/4 {
  --tw-translate-x: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-y-1\/2 {
  --tw-translate-y: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-x-1\/2 {
  --tw-translate-x: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-y-1\/4 {
  --tw-translate-y: -25%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.rotate-0 {
  --tw-rotate: 0deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.rotate-180 {
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.scale-x-0 {
  --tw-scale-x: 0;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.scale-x-100 {
  --tw-scale-x: 1;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
/* ... */

